[package]
name = "pachamama"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
